@@ -601,6 +601,7 @@ Some default configuration options have changed:
 * (bug 6201) Treat spaces as underscores in parameters to {{ns:}}
 * (bug 6006) Allow hiding the password change fields using an authentication plugin
 * (bug 6489) Use appropriate link colour on Special:Shortpages
+* Added formatnum magic word
 
 == Compatibility ==
 
